# SberDriver

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  main.py  page.html  pyproject.toml  requirements.txt  start.sh  test.py
bot/: tst.py
bot/src/: start.py
bot/src/routers/: __init__.py  close.py  parse.py  send_captcha.py
web/: chrome.py  driver.py  firefox.py  plat.py
