[tool.poetry]
name = "sberbot"
version = "0.1.0"
description = ""
authors = ["Malvere <gatling1404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.14.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
